--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/zkSBO3Z.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      short_name="Nexus"
+      name="Codespells Spell Sharing server"
+      content="A spell sharing hub, created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
