--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,6 +27,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>CodeSpells</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-J6N2NMKYC9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-J6N2NMKYC9');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
